@@ -20,7 +20,6 @@ import jakarta.xml.bind.JAXBException;
 import javafx.application.Platform;
 import javafx.beans.property.*;
 import javafx.beans.value.ChangeListener;
-import javafx.beans.value.ObservableValue;
 import javafx.collections.FXCollections;
 import javafx.collections.ListChangeListener;
 import javafx.collections.ObservableList;
@@ -66,6 +65,7 @@ import org.cirdles.tripoli.gui.dataViews.plots.plotsControllers.mcmcPlots.MCMCPl
 import org.cirdles.tripoli.gui.dataViews.plots.plotsControllers.ogTripoliPlots.OGTripoliPlotsWindow;
 import org.cirdles.tripoli.gui.dataViews.plots.plotsControllers.ogTripoliPlots.OGTripoliViewController;
 import org.cirdles.tripoli.gui.dialogs.TripoliMessageDialog;
+import org.cirdles.tripoli.gui.utilities.BrowserControl;
 import org.cirdles.tripoli.plots.PlotTwo;
 import org.cirdles.tripoli.sessions.Session;
 import org.cirdles.tripoli.sessions.analysis.Analysis;
@@ -103,8 +103,7 @@ import static org.cirdles.tripoli.constants.TripoliConstants.MISSING_STRING_FIEL
 import static org.cirdles.tripoli.expressions.operations.Operation.OPERATIONS_MAP;
 import static org.cirdles.tripoli.gui.SessionManagerController.listOfSelectedAnalyses;
 import static org.cirdles.tripoli.gui.SessionManagerController.tripoliSession;
-import static org.cirdles.tripoli.gui.TripoliGUI.primaryStage;
-import static org.cirdles.tripoli.gui.TripoliGUI.primaryStageWindow;
+import static org.cirdles.tripoli.gui.TripoliGUI.*;
 import static org.cirdles.tripoli.gui.constants.ConstantsTripoliApp.*;
 import static org.cirdles.tripoli.gui.dialogs.TripoliMessageDialog.showChoiceDialog;
 import static org.cirdles.tripoli.gui.utilities.UIUtilities.showTab;
@@ -358,12 +357,11 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
      */
     @Override
     public void initialize(URL location, ResourceBundle resources) {
+        expressionUnsavedLabel.setVisible(false);
         mcmc2Button.setDisable(false);
 
         // March 2024 implement drag n drop of files ===================================================================
-        analysisManagerGridPane.setOnDragOver(event -> {
-            event.acceptTransferModes(TransferMode.MOVE);
-        });
+        analysisManagerGridPane.setOnDragOver(event -> event.acceptTransferModes(TransferMode.MOVE));
         analysisManagerGridPane.setOnDragDropped(event -> {
             Dragboard db = event.getDragboard();
             if (event.getDragboard().hasFiles()) {
@@ -391,9 +389,8 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
                             analysis = null;
                             TripoliMessageDialog.showWarningDialog("Tripoli does not recognize this file format.", primaryStageWindow);
                         }
-                    } catch (JAXBException | IOException | InvocationTargetException | NoSuchMethodException e) {
-//                    throw new RuntimeException(e);
-                    } catch (IllegalAccessException | TripoliException e) {
+                    } catch (JAXBException | IOException | InvocationTargetException | NoSuchMethodException |
+                             IllegalAccessException | TripoliException e) {
 //                    throw new RuntimeException(e);
                     }
                 }
@@ -412,7 +409,7 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
 //TODO: ALL need fixing:           throw new RuntimeException(e);
 //        }
 
-        ImageView imageView = new ImageView(getClass().getResource("/" + TRIPOLI_CLIPBOARD_ICON).toExternalForm());
+        ImageView imageView = new ImageView(Objects.requireNonNull(getClass().getResource("/" + TRIPOLI_CLIPBOARD_ICON)).toExternalForm());
         exportToClipBoardButton.setGraphic(imageView);
         exportToClipBoardButton.setPadding(new Insets(0, 0, 0, 0));
         exportToClipBoardButton.setMaxHeight(35);
@@ -437,8 +434,7 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
             items = items.sorted();
             memberAnalysesListView.setItems(items);
             memberAnalysesListView.setOnMouseClicked(event -> {
-                AnalysisInterface analysisSelected = ((AnalysisInterface) ((ListView) event.getSource()).getSelectionModel().getSelectedItem());
-                analysis = analysisSelected;
+                analysis = ((AnalysisInterface) ((ListView) event.getSource()).getSelectionModel().getSelectedItem());
                 if (MouseButton.PRIMARY == event.getButton() && (null != analysis)) {
                     if (2 == event.getClickCount() && -1 == event.getTarget().toString().lastIndexOf("null")) {
                         MenuItem menuItemAnalysesManager = ((MenuBar) TripoliGUI.primaryStage.getScene()
@@ -458,6 +454,8 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
 
         openConcatenatedButton.setVisible((null != concatenatedAnalysis)
                 && !((Analysis) analysis).hasMemberAnalyses());
+
+        updateStageTitle();
     }
 
     public void openConcatenatedAction() {
@@ -594,7 +592,6 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
             analysisMethodTabPane.getTabs().remove(selectTwoUserFunctionsTab);
         }
 
-
         processingToolBar.setDisable(null == analysis.getAnalysisMethod());
     }
 
@@ -646,7 +643,7 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
             mapOfDetectorsToBaselineCell = analysis.getMethod().getBaselineTable().getMapOfDetectorsToBaselineCells();
         }
         for (int col = 0; col < detectorCount + 1; col++) {
-            populateDetectorDetailRow(methodGridPane, (0 < col) ? detectorsInOrderList.get(col - 1).getDetectorName() : "spec\u2193/detector\u2192", col, 0);
+            populateDetectorDetailRow(methodGridPane, (0 < col) ? detectorsInOrderList.get(col - 1).getDetectorName() : "spec↓/detector→", col, 0);
 
             if (methodGridPane.equals(analysisDetectorsGridPane)) {
                 populateDetectorDetailRow(methodGridPane, (0 < col) ? detectorsInOrderList.get(col - 1).getDetectorType().getName() : "type", col, 1);
@@ -728,23 +725,28 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
         List<UserFunction> userFunctions = analysis.getUserFunctions();
 
         AnalysisMethodPersistance analysisMethodPersistance =
-                tripoliPersistentState.getMapMethodNamesToDefaults().get(analysis.getMethod().getMethodName());
+                null;
+        if (tripoliPersistentState != null) {
+            analysisMethodPersistance = tripoliPersistentState.getMapMethodNamesToDefaults().get(analysis.getMethod().getMethodName());
+        }
         if (analysisMethodPersistance == null) {
             analysisMethodPersistance = new AnalysisMethodPersistance(analysis.getMassSpecExtractedData().getHeader().cyclesPerBlock());
-            tripoliPersistentState.getMapMethodNamesToDefaults().put(analysis.getMethod().getMethodName(), analysisMethodPersistance);
+            if (tripoliPersistentState != null) {
+                tripoliPersistentState.getMapMethodNamesToDefaults().put(analysis.getMethod().getMethodName(), analysisMethodPersistance);
+            }
         }
 
         Map<String, UserFunctionDisplay> userFunctionDisplayMap = analysisMethodPersistance.getUserFunctionDisplayMap();
         if (userFunctionDisplayMap.isEmpty()) {
-            for (int i = 0; i < userFunctions.size(); i++) {
-                userFunctionDisplayMap.put(userFunctions.get(i).getName(), userFunctions.get(i).calcUserFunctionDisplay());
+            for (UserFunction userFunction : userFunctions) {
+                userFunctionDisplayMap.put(userFunction.getName(), userFunction.calcUserFunctionDisplay());
             }
         } else {
-            for (int i = 0; i < userFunctions.size(); i++) {
-                UserFunctionDisplay userFunctionDisplay = userFunctionDisplayMap.get(userFunctions.get(i).getName());
+            for (UserFunction userFunction : userFunctions) {
+                UserFunctionDisplay userFunctionDisplay = userFunctionDisplayMap.get(userFunction.getName());
                 if (userFunctionDisplay != null) {
-                    userFunctions.get(i).setDisplayed(userFunctionDisplay.isDisplayed());
-                    userFunctions.get(i).setInverted(userFunctionDisplay.isInverted());
+                    userFunction.setDisplayed(userFunctionDisplay.isDisplayed());
+                    userFunction.setInverted(userFunctionDisplay.isInverted());
                 }
             }
         }
@@ -758,7 +760,6 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
         List<CheckBox> functionCheckBoxList = new ArrayList<>();
         List<CheckBox> expressionCheckBoxList = new ArrayList<>();
         List<Label> exportLabelList = new ArrayList<>();
-        List<RadioButton> cycleMeanRBs = new ArrayList<>();
 
         ChangeListener<Boolean> allRatiosChangeListener = (observable, oldValue, newValue) -> {
             for (CheckBox checkBoxRatio : ratioCheckBoxList) {
@@ -1063,7 +1064,7 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
             allRatios = new ArrayList<>();
             allRatios.addAll(analysis.getAnalysisMethod().getIsotopicRatiosList());
             allRatios.addAll(analysis.getAnalysisMethod().getDerivedIsotopicRatiosList());
-            Collections.sort(allRatios, IsotopicRatio::compareTo);
+            allRatios.sort(IsotopicRatio::compareTo);
 
             populateRatiosForDisplay(allRatios);
 
@@ -1176,9 +1177,7 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
 
         // Enable/disable save and generate plot buttons based on X and Y axis selections
         if (xAxisUserFunctionComboBox != null && yAxisUserFunctionComboBox != null) {
-            ChangeListener<UserFunction> comboBoxChangeListener = (observable, oldValue, newValue) -> {
-                updateSaveAndGenerateButtonStates();
-            };
+            ChangeListener<UserFunction> comboBoxChangeListener = (observable, oldValue, newValue) -> updateSaveAndGenerateButtonStates();
 
             xAxisUserFunctionComboBox.getSelectionModel().selectedItemProperty().addListener(comboBoxChangeListener);
             yAxisUserFunctionComboBox.getSelectionModel().selectedItemProperty().addListener(comboBoxChangeListener);
@@ -1189,14 +1188,10 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
 
         // Enable/disable delete button based on ListView selection
         if (plot2SelectionLV != null && deletePlot2SelectionButton != null) {
-            plot2SelectionLV.getSelectionModel().selectedItemProperty().addListener((observable, oldValue, newValue) -> {
-                updateDeleteButtonState();
-            });
+            plot2SelectionLV.getSelectionModel().selectedItemProperty().addListener((observable, oldValue, newValue) -> updateDeleteButtonState());
 
             // Also update when list items change
-            plot2SelectionList.addListener((ListChangeListener<PlotTwo>) c -> {
-                updateDeleteButtonState();
-            });
+            plot2SelectionList.addListener((ListChangeListener<PlotTwo>) c -> updateDeleteButtonState());
 
             // Set initial state
             updateDeleteButtonState();
@@ -1238,7 +1233,7 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
             return;
         }
 
-        TripoliPersistentState tripoliPersistentState = null;
+        TripoliPersistentState tripoliPersistentState;
         try {
             tripoliPersistentState = TripoliPersistentState.getExistingPersistentState();
         } catch (TripoliException e) {
@@ -1264,7 +1259,7 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
             return;
         }
 
-        TripoliPersistentState tripoliPersistentState = null;
+        TripoliPersistentState tripoliPersistentState;
         try {
             tripoliPersistentState = TripoliPersistentState.getExistingPersistentState();
         } catch (TripoliException e) {
@@ -1431,7 +1426,7 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
             return;
         }
 
-        TripoliPersistentState tripoliPersistentState = null;
+        TripoliPersistentState tripoliPersistentState;
         try {
             tripoliPersistentState = TripoliPersistentState.getExistingPersistentState();
         } catch (TripoliException e) {
@@ -1489,7 +1484,7 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
             return;
         }
 
-        TripoliPersistentState tripoliPersistentState = null;
+        TripoliPersistentState tripoliPersistentState;
         try {
             tripoliPersistentState = TripoliPersistentState.getExistingPersistentState();
         } catch (TripoliException e) {
@@ -1638,9 +1633,7 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
             }
         });
 
-        expressionScrollPane.setOnDragExited(event -> {
-            expressionTextFlow.getChildren().remove(insertIndicator);
-        });
+        expressionScrollPane.setOnDragExited(event -> expressionTextFlow.getChildren().remove(insertIndicator));
 
         expressionScrollPane.setOnDragDropped((DragEvent event) -> {
             int index = expressionTextFlow.getChildren().indexOf(insertIndicator);
@@ -1975,7 +1968,7 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
             try {
                 previewAndSculptDataAction();
             } catch (TripoliException e) {
-               // throw new RuntimeException(e);
+                // throw new RuntimeException(e);
             }
             processingToolBar.setDisable(null == analysis.getAnalysisMethod());
             exportToETReduxButton.setDisable(analysis.getMassSpecExtractedData().getBlocksDataLite().isEmpty());
@@ -2058,30 +2051,6 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
         MCMC2PlotsWindow.loadPlotsWindow();
     }
 
-    private void previewAndSculptDataFromFile() throws TripoliException {
-        // first time opening file, suppress plotting
-        TripoliPersistentState tripoliPersistentState = null;
-        try {
-            tripoliPersistentState = TripoliPersistentState.getExistingPersistentState();
-        } catch (TripoliException e) {
-//            throw new RuntimeException(e);
-        }
-        AnalysisMethodPersistance analysisMethodPersistance =
-                tripoliPersistentState.getMapMethodNamesToDefaults().get(analysis.getMethod().getMethodName());
-        if (analysisMethodPersistance != null) {
-            Map<String, UserFunctionDisplay> userFunctionDisplayMap = analysisMethodPersistance.getUserFunctionDisplayMap();
-            List<UserFunction> userFunctions = analysis.getUserFunctions();
-            for (int i = 0; i < userFunctions.size(); i++) {
-                UserFunctionDisplay userFunctionDisplay = userFunctionDisplayMap.get(userFunctions.get(i).getName());
-                if (userFunctionDisplay != null) {
-                    userFunctions.get(i).setDisplayed(userFunctionDisplay.isDisplayed());
-                    userFunctions.get(i).setInverted(userFunctionDisplay.isInverted());
-                }
-            }
-        }
-        previewAndSculptDataAction();
-    }
-
     public void previewAndSculptDataAction() throws TripoliException {
         // ogTripoli view
         // first time opening file, suppress plotting
@@ -2092,7 +2061,7 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
 //            throw new RuntimeException(e);
         }
 
-        if ((analysis.getMethod() != null) &&
+        if (tripoliPersistentState != null && (analysis.getMethod() != null) &&
                 (tripoliPersistentState.getMapMethodNamesToDefaults().get(analysis.getMethod().getMethodName()) != null)) {
             if (null != ogTripoliPreviewPlotsWindow) {
                 ogTripoliPreviewPlotsWindow.close();
@@ -2100,15 +2069,9 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
 
             AllBlockInitForMCMC.PlottingData plottingData = null;
             switch (analysis.getAnalysisCaseNumber()) {
-                case 0 -> {
+                case 0, 2, 3 -> {
                 }
-                case 1 -> {
-                    plottingData = AllBlockInitForDataLiteOne.initBlockModels(analysis);
-                }
-                case 2 -> {
-                }
-                case 3 -> {
-                }
+                case 1 -> plottingData = AllBlockInitForDataLiteOne.initBlockModels(analysis);
                 case 4 -> {
                     if (analysis.getAnalysisMethod() != null) {
                         plottingData = AllBlockInitForMCMC.initBlockModels(analysis);
@@ -2156,7 +2119,9 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
             if ((button instanceof Button) && (null != analysis.getMapOfBlockIdToPlots().get(Integer.parseInt(button.getId())))) {
                 tuneButton((Button) button, SHOW);
             } else if (null == analysis.getMapOfBlockIdToPlots().get(Integer.parseInt(button.getId()))) {
-                tuneButton((Button) button, SKIP);
+                if (button instanceof Button) {
+                    tuneButton((Button) button, SKIP);
+                }
             }
         }
     }
@@ -2227,7 +2192,7 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
                     serializeObjectToFile(tripoliSession, tripoliPersistentState.getMRUSessionFile().getAbsolutePath());
                 }
                 Session.setSessionChanged(false);
-            } catch (TripoliException | IOException ex) {
+            } catch (TripoliException ex) {
                 TripoliMessageDialog.showWarningDialog(ex.getMessage(), null);
             }
         }
@@ -2241,13 +2206,12 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
         }
         Path directoryPath = Paths.get(sampleMetaDataFolderPath);
         try {
-            Files.createDirectories(directoryPath);
             List<Path> xmlFiles;
             try (Stream<Path> walk = Files.walk(directoryPath)) {
                 xmlFiles = walk
                         .filter(Files::isRegularFile)
-                        .filter(p -> p.toString().toLowerCase().endsWith(".xml"))
-                        .collect(Collectors.toList());
+                        .filter(p -> p.toString().endsWith(etReduxFraction.getSampleName() + ".xml"))
+                        .toList();
             }
             // should be only one file
             if (xmlFiles.isEmpty()) {
@@ -2311,7 +2275,7 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
                     sampleAnalysisFolderPath + File.separator + aliquotName + File.separator + fractionMame;
             etReduxFraction.serializeXMLObject(exportFileName);
             liveWorkFlowStatusText.setText("LiveWorkFlow Exported to " + exportFileName);
-        } catch (IOException | JAXBException e) {
+        } catch (IOException e) {
             e.printStackTrace();
         }
     }
@@ -2319,11 +2283,7 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
     private void exportToFile(ETReduxFraction etReduxFraction) {
         String fileName = etReduxFraction.getSampleName() + "_" + etReduxFraction.getFractionID() + "_" + etReduxFraction.getEtReduxExportType() + ".xml";
         etReduxFraction.serializeXMLObject(fileName);
-        try {
-            saveExportFile(etReduxFraction, primaryStage);
-        } catch (IOException | TripoliException e) {
-            //throw new RuntimeException(e);
-        }
+        saveExportFile(etReduxFraction, primaryStage);
     }
 
     public void exportToClipboardAction() {
@@ -2361,16 +2321,24 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
         List<UserFunction> userFunctions = analysis.getUserFunctions();
 
         AnalysisMethodPersistance analysisMethodPersistance =
-                tripoliPersistentState.getMapMethodNamesToDefaults().get(analysis.getMethod().getMethodName());
+                null;
+        if (tripoliPersistentState != null) {
+            analysisMethodPersistance = tripoliPersistentState.getMapMethodNamesToDefaults().get(analysis.getMethod().getMethodName());
+        }
 
-        Map<String, UserFunctionDisplay> userFunctionDisplayMap = analysisMethodPersistance.getUserFunctionDisplayMap();
+        Map<String, UserFunctionDisplay> userFunctionDisplayMap = null;
+        if (analysisMethodPersistance != null) {
+            userFunctionDisplayMap = analysisMethodPersistance.getUserFunctionDisplayMap();
+        }
         for (int i = 0; i < userFunctions.size(); i++) {
             UserFunctionDisplay userFunctionDisplay = userFunctionDisplayMap.get(userFunctions.get(i).getName());
             userFunctionDisplay.setDisplayed(userFunctions.get(i).isDisplayed());
             userFunctionDisplay.setInverted(userFunctions.get(i).isInverted());
         }
 
-        tripoliPersistentState.updateTripoliPersistentState();
+        if (tripoliPersistentState != null) {
+            tripoliPersistentState.updateTripoliPersistentState();
+        }
     }
 
     public void newCustomExpressionOnAction() {
@@ -2744,6 +2712,10 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
         treatAsRatioCheckBox.setSelected(!treatAsRatioCheckBox.isSelected());
     }
 
+    public void howToExpressionsVideoAction() {
+        BrowserControl.showURI("https://www.youtube.com/watch?v=AAgA4ve4wcM");
+    }
+
     private enum Mode {
 
         EDIT("Edit"),
@@ -2810,7 +2782,7 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
                 current = current.prev;
                 updateProperties();
                 return current.state;
-            } else if (current.prev == null) {
+            } else if (current != null && current.prev == null) {
                 Node newNext = current;
                 current = new Node(null);
                 current.next = newNext;
@@ -2870,7 +2842,7 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
         }
 
         private class Node {
-            T state;
+            final T state;
             Node prev;
             Node next;
 
@@ -2917,8 +2889,8 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
     }
 
     class RatioClickHandler implements EventHandler<MouseEvent> {
-        IsotopicRatio ratio;
-        VBox ratioVBox;
+        final IsotopicRatio ratio;
+        final VBox ratioVBox;
 
         public RatioClickHandler(IsotopicRatio ratio, VBox ratioVBox) {
             this.ratio = ratio;
@@ -2939,8 +2911,8 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
     }
 
     class FlipRatioClickHandler implements EventHandler<MouseEvent> {
-        IsotopicRatio ratio;
-        VBox ratioVBox;
+        final IsotopicRatio ratio;
+        final VBox ratioVBox;
 
         public FlipRatioClickHandler(IsotopicRatio ratio, VBox ratioVBox) {
             this.ratio = ratio;
@@ -2971,31 +2943,11 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
         }
     }
 
-    private class CheckBoxChangeListener implements ChangeListener<Boolean> {
-        private final CheckBox checkBox;
-
-        public CheckBoxChangeListener(CheckBox checkBox) {
-            this.checkBox = checkBox;
-        }
-
-        /**
-         * @param observable The {@code ObservableValue} which value changed
-         * @param oldValue   The old value
-         * @param newValue   The new value
-         */
-        @Override
-        public void changed(ObservableValue<? extends Boolean> observable, Boolean oldValue, Boolean newValue) {
-            boolean displayed = newValue;
-            IsotopicRatio ratio = (IsotopicRatio) checkBox.getUserData();
-            updateAnalysisRatios(ratio, displayed);
-        }
-    }
-
     private class ExpressionTextNode extends Text {
         public final String text;
+        protected final Color selectedColor;
+        protected final Color oppositeColor;
         protected Color regularColor;
-        protected Color selectedColor;
-        protected Color oppositeColor;
         protected int fontSize;
         private int index;
 
@@ -3049,9 +3001,7 @@ public class AnalysisManagerController implements Initializable, AnalysisManager
                 event.consume();
             });
 
-            setOnDragExited(event -> {
-                expressionTextFlow.getChildren().remove(insertIndicator);
-            });
+            setOnDragExited(event -> expressionTextFlow.getChildren().remove(insertIndicator));
 
             setOnDragDropped(event -> {
                 Dragboard db = event.getDragboard();
